test/grammar/failing/i92-initialization-multiple.cfr
// http://gsd.uwaterloo.ca:8888/question/440/incorrect-initialization-of-multiple

x -> integer * = 1, 2, 3
